[package]
name = "stock_up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.93"
error-chain = "0.12.2"
image = "0.24.5"
rand = "0.8.5"
bytes = "1.4.0"
dotenv = "0.15.0"
